fix: add header animation

--- a/docs-docusaurus/src/pages/index.module.css
+++ b/docs-docusaurus/src/pages/index.module.css
@@ -3,14 +3,27 @@
  * and scoped locally.
  */
 
-.heroBanner {
+ .heroBanner {
   padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: black;
   color: white;
-  
+  background: linear-gradient(45deg, #303846, #4a5568, #978787, #4a5568, #303846);
+  background-size: 400% 400%;
+  animation: gradientBackground 15s ease infinite;
+}
+
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @media screen and (max-width: 996px) {
